# TraderAlbionBot

./: README.md  main.py  pyproject.toml  requirements.txt  setting.py
active/: cliker.py
app/: main.py  setting.py
app/bd/: data_list_query.py  manage_bd.py
app/bd/CRUD/: __init__.py  crud_class.py  delete_data.py  insert_data.py  select_data.py  update.py
app/bd/CRUD_Scripts/: __init__.py  check_connect.py  mails_scripts.py  orders_scripts.py  utils.py  valid_name_item_scripts.py
app/bd/bd_connect/: bd_link_conf.py  bd_sinc_alch.py
app/bd/models/: models.py  tools_model.py
app/bd/queries/: __init__.py  sql_reader.py
app/detect/tool_detect/: detect.py  reader.py  screenshot.py  vision.py  wincap.py  x_y.py
app/gen_logic/: scan_mail.py  scan_orders.py
app/tests/: __init__.py
app/tests/bd_test/: __init__.py  test_async_func.py  utils.py
bd/: bd_conn.py  bd_sinc_alch.py  data_setting.py  datatrade.db  manage_bd.py
detect/tool_detect/: detect.py  reader.py  vision.py  wincap.py
game_board/: anpoc.py  game_board.py  impacket.py
gen_logic/: scan_mail.py  scan_orders.py
tests/my_tests/bd_test/: bd_manage_test.py  test_conect_bd.py
