[tool.poetry]
name = "traderalbionbot"
version = "0.1.0"
description = ""
authors = ["Asm <destroasm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
opencv-python = "^4.10.0.84"
pyautogui = "^0.9.54"
pywin32 = "^308"
deprecated = "^1.2.15"
pytesseract = "^0.3.13"
pyscreenshot = "^3.1"
pynput = "^1.7.7"
scapy = "^2.6.1"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
