[tool.poetry]
name = "traderalbionbot"
version = "0.1.0"
description = ""
authors = ["Asm <destroasm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
opencv-python = "^4.10.0.84"
pyautogui = "^0.9.54"
pywin32 = "^308"
deprecated = "^1.2.15"
pytesseract = "^0.3.13"
pyscreenshot = "^3.1"
pynput = "^1.7.7"
keyboard = "^0.13.5"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
pytest = "^8.3.4"
impacket = "^0.12.0"
scapy = "^2.6.1"
pytest-asyncio = "^0.25.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
